--- a/Tela 1 - Inicial/tela inicial.css
+++ b/Tela 1 - Inicial/tela inicial.css
@@ -28,10 +28,82 @@
     
     background: rgb( 96, 84, 233);
     color: white;
-    border-radius: 20px;
+    border-radius: 5px;
     border: 2px solid black;
     font-family: arial;
     cursor: pointer;
     text-shadow: 1px 2px 3px #000000;
 
+}
+
+@media screen and (max-width: 1500px) {
+    
+    #btn{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        left: 89%;
+        top: 5%;
+        width: 80px;
+        height: 45px;
+        
+        background: rgb( 96, 84, 233);
+        color: white;
+        border-radius: 5px;
+        border: 2px solid black;
+        font-family: arial;
+        cursor: pointer;
+        text-shadow: 1px 2px 3px #000000;
+    
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    
+    #btn{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        left: 85%;
+        top: 5%;
+        width: 80px;
+        height: 45px;
+        
+        background: rgb( 96, 84, 233);
+        color: white;
+        border-radius: 5px;
+        border: 2px solid black;
+        font-family: arial;
+        cursor: pointer;
+        text-shadow: 1px 2px 3px #000000;
+    
+    }
+}
+
+@media screen and (max-width: 700px) {
+    
+    #btn{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        left: 82%;
+        top: 5%;
+        width: 80px;
+        height: 45px;
+        
+        background: rgb( 96, 84, 233);
+        color: white;
+        border-radius: 5px;
+        border: 2px solid black;
+        font-family: arial;
+        cursor: pointer;
+        text-shadow: 1px 2px 3px #000000;
+    
+    }
 }
