--- a/Tela 2 - Login/tela 2 - login.css
+++ b/Tela 2 - Login/tela 2 - login.css
@@ -6,8 +6,8 @@ body{
 }
 .block{
     position: relative;
-    width: 40vh;
-    height: 45vh;
+    width: 45vh;
+    height: 50vh;
     margin: 0 auto;
     top: 20vh;
     background-color: white;
@@ -37,10 +37,22 @@ body{
 
 .inputs button{
     position: relative;
-    top: 10vh;
-    left: 10vh;
+    top: 12vh;
+    left: 10.5vh;
     width: 50%;
     height: 8vh;
     border: 1px solid blue;
     border-radius: 20px;
+}
+
+@media screen and (max-height: 600px){
+    .inputs button{
+        position: relative;
+        top: 10vh;
+        left: 10.5vh;
+        width: 50%;
+        height: 8vh;
+        border: 1px solid blue;
+        border-radius: 20px;
+    }
 }
