--- a/Tela 5 - Menu Principal/Tela 5 - Menu Principal.css
+++ b/Tela 5 - Menu Principal/Tela 5 - Menu Principal.css
@@ -7,7 +7,6 @@
 }
 
 body{
-    background-color: grey;
     background-size: cover;
     background-attachment: fixed;
     position: absolute;
@@ -20,27 +19,28 @@ body{
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-    height: 80vh;
+    height: 50vh;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
     background-position: center center;
     font-family: poppins;
-    margin-left: 6%;
-    margin-top: 10%;
+    margin-left: 35%;
+    margin-top: 15%;
 }
 
 .cardwrapper{
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 100px;
 
 }
 
 .cardwrapper .cardbox{
     width: 200px;
     height: 150px;
-    border-radius: 15px;
+    border-radius: 5px;
+    border: 1px solid black;
     transition: transform 500ms ease-out;
     overflow: hidden; 
     color: #fff;
@@ -55,9 +55,9 @@ body{
     background: #fff;
     display: inline-block;
     margin-top: 122px;
-    margin-left: -2px;
-    padding-right: 68px;
-    padding-left: 70px; 
+    margin-right: 60px;
+    padding-right: 78px;
+    padding-left: 78px; 
     padding-bottom: 25px;
     padding-top: 5px;
     text-decoration: none;
