--- a/Tela 5 - Menu Principal/Tela 5 - Menu Principal.css
+++ b/Tela 5 - Menu Principal/Tela 5 - Menu Principal.css
@@ -1,87 +1,51 @@
-*{
+.all-cards{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    top: 0;
+    bottom: 0;
+    left:0;
+    right: 0;
+    
+}
+.all-cards a{
+    position: relative;
+    display: inline-block;
+    left: 18%;
+    width: 200px;
+    height: 170px;
+    padding: 5%;
+    text-decoration: none;
+}
+
+.card{
+    position: relative;
+    background: url(template.png);
+    width: 200px;
+    height: 170px;
+    border-radius: 5px;
+    border: 2px solid black;
     
 }
 
-body{
-    background-size: cover;
-    background-attachment: fixed;
-    position: absolute;
-    display: grid;
-}
-
-.cards{
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    height: 50vh;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-position: center center;
-    background-position: center center;
-    font-family: poppins;
-    margin-left: 35%;
-    margin-top: 15%;
-}
-
-.cardwrapper{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 100px;
-
-}
-
-.cardwrapper .cardbox{
-    width: 200px;
-    height: 150px;
-    border-radius: 5px;
-    border: 1px solid black;
-    transition: transform 500ms ease-out;
-    overflow: hidden; 
-    color: #fff;
-    text-align: center;
-    background-image: url(template.png);
-    background-size: 200px 125px;
-    backdrop-filter: blur(30px);
-}
-
-.menu-botao{
-    border: none;
-    background: #fff;
-    display: inline-block;
-    margin-top: 122px;
-    margin-right: 60px;
-    padding-right: 78px;
-    padding-left: 78px; 
-    padding-bottom: 25px;
-    padding-top: 5px;
+.text p{
+    position: relative;
     text-decoration: none;
+    background-color: grey;
+    background-size: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 0 auto;
     text-align: center;
-    font-size: 16px;
+    top: 14.68vh;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color: white;
 }
 
-.cardwrapper .cardbox:before{
-    content:'';
-    background: rgba(255, 255, 255, 0.3);
-    width: 60%;
-    height: 100%;
-    top: 0%;
-    left: -125px;
-    transform: skew(45deg);
-    position: absolute;
-    animation-direction: left;
-    transition-duration: 500ms;
-}
-
-.cardwrapper .cardbox:hover{
-    transform: translateY(-5%);
-}
-
-.cardwrapper .cardbox:hover:before{
-    left: 150%;
+.clear{
+    clear: both;
 }
