--- a/Tela 5 - Menu Principal/Tela 5 - Menu Principal.css
+++ b/Tela 5 - Menu Principal/Tela 5 - Menu Principal.css
@@ -11,17 +11,25 @@
     right: 0;
     
 }
+.card{
+    position: relative;
+    float: left;
+    width: 250px;
+    padding: 4%;
+    left: 15%;
+    
+}
+
 .all-cards a{
     position: relative;
     display: inline-block;
-    left: 18%;
+    background-color: brown;
     width: 200px;
     height: 170px;
-    padding: 5%;
     text-decoration: none;
 }
 
-.card{
+.card-layout{
     position: relative;
     background: url(template.png);
     width: 200px;
@@ -38,9 +46,8 @@
     background-size: 100%;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin: 0 auto;
+    margin-top: 71%;
     text-align: center;
-    top: 14.68vh;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     color: white;
@@ -48,4 +55,14 @@
 
 .clear{
     clear: both;
+}
+
+@media screen and (max-width=1400px){
+    .card{
+        position: relative;
+        float: left;
+        width: 250px;
+        padding: 5%;
+        left: 13%;
+    }
 }
